<resources>
    <string name="app_name">Itwapp</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Interviews</string>
    <string name="title_section2">Help</string>
    <string name="title_section3">About</string>
    <string name="title_section4">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="none">None</string>
    <string name="unknown">Unknown</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="no_data">No data</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!--Login activity-->
    <string name="title_activity_login">ItwApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Validate</string>
    <string name="error_invalid_email">Email is incorrect</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_sign_up"><u>Sign up</u></string>
    <!--for shared pref-->
    <string name="login_preference">login</string>

    <!--Logout fragment-->
    <string name="fragment_logout">Logout</string>

    <!--Interviews-->
    <string name="activity_interviews_no_data">No interviews</string>

    <!--Alert dialog-->
    <string name="dialog_loading">Loading</string>
    <string name="dialog_exit_application">Are you sure you want to exit application?</string>
    <string name="dialog_delete_interview">Are you sure you want to delete this interview?</string>
    <string name="dialog_delete_applicant">Are you sure you want to delete this applicant?</string>

    <!--Delete dialog-->
    <string name="dialog_title_delete_error">The deletion has failed</string>
    <string name="dialog_title_delete_success">The deletion was done successfully</string>
    <string name="dialog_title_update_forbidden">The modification is forbidden because there are applicants</string>

    <!--Alert messages-->
    <string name="dialog_title_generic_error">Error</string>
    <string name="dialog_title_generic_success">Success</string>
    <string name="dialog_content_generic_error_server">Problem connecting to server</string>
    <string name="dialog_content_cancellation">Cancelling the recovery of data done</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!--List interview-->
    <string name="activity_interviews_interview_sent">sent</string>
    <string name="activity_interviews_interview_answers">answers</string>
    <string name="activity_interviews_interview_new">news</string>

    <!--Add interview activity-->
    <string name="title_activity_add_interview">Add Interview</string>
    <string name="activity_add_interview_name">Name</string>
    <string name="activity_add_interview_description">Description (optionnal)</string>
    <string name="activity_add_interview_video">Presentation video (optionnal)</string>
    <string name="activity_add_interview_callback">Redirection URL (optionnal)</string>
    <string name="activity_add_interview_questions">Questions</string>
    <string name="activity_add_question_button">Add</string>
    <string name="activity_add_interview_name_error">Name field is required</string>
    <string name="activity_add_interview_questions_error">At least one question required</string>
    <string name="activity_add_interview_success">Interview created successfully</string>

    <!--Add question-->
    <string name="dialog_add_question_content">Content</string>
    <string name="dialog_add_question_reading_time">Reading time</string>
    <string name="dialog_add_question_answer_time">Answer time</string>
    <string name="dialog_add_interview_question_content_error">Content question field is required</string>
    <string-array name="question_time">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <!--Edit interview activity-->
    <string name="title_activity_edit_interview">Edit Interview</string>
    <string name="activity_edit_interview_name">Name</string>
    <string name="activity_edit_interview_description">Description (optionnal)</string>
    <string name="activity_edit_interview_video">Presentation video (optionnal)</string>
    <string name="activity_edit_interview_callback">Redirection URL (optionnal)</string>
    <string name="activity_edit_interview_questions">Questions</string>
    <string name="activity_update_interview_success">The interview has been updated successfully</string>

    <!--View interview activity-->
    <string name="title_activity_interview">Interview</string>
    <string name="activity_interview_description">Description</string>
    <string name="activity_interview_video">Video</string>
    <string name="activity_interview_callback">Callback</string>
    <string name="activity_interview_questions">Questions</string>

    <!--Applicants activity-->
    <string name="title_activity_applicants">Applicants</string>
    <string name="activity_applicants_deadline">Deadline : </string>
    <string name="activity_applicants_no_data">No applicants</string>

    <!--Applicant details activity-->
    <string name="title_activity_applicant_details">Applicant details</string>
    <string name="activity_applicant_details_mail">Mail</string>
    <string name="activity_applicant_details_first_name">First name</string>
    <string name="activity_applicant_details_last_name">Last name</string>
    <string name="activity_applicant_details_deadline">Deadline</string>
    <string name="activity_applicant_details_deleted">Deleted :\u00A0</string>
    <string name="activity_applicant_details_questions">Answers :\u00A0</string>
    <string name="activity_applicant_details_answer_date">Answer date</string>
    <string name="activity_applicant_details_answer_date_not_completed">not completed</string>
    <string name="activity_applicant_details_email_view">Email view :\u00A0</string>
    <string name="activity_applicant_details_status">Status :\u00A0</string>
    <string name="activity_applicant_details_status_completed">completed</string>
    <string name="activity_applicant_details_status_in_progress">in progress</string>
    <string name="activity_applicant_details_status_open_email">open email</string>
    <string name="activity_applicant_details_status_email_sent">email sent</string>
    <string name="title_activity_applicant_deletion">Applicant deletion</string>
    <string name="activity_applicant_details_error">Error while retrieving the applicant</string>

    <!--Add applicant activity-->
    <string name="title_activity_add_applicant">Add applicant</string>
    <string name="activity_add_applicant_mails">Emails (split by ;)</string>
    <string name="activity_add_applicant_message">Message (optionnal)</string>
    <string name="activity_add_applicant_deadline">Deadline (optionnal)</string>
    <string name="activity_add_applicant_language">Language</string>
    <string name="activity_add_applicant_language_english">English</string>
    <string name="activity_add_applicant_language_french">French</string>
    <string name="activity_add_applicant_mails_error">Mails field is required</string>
    <string name="dialog_title_add_applicant_error">The creation has failed</string>
    <string name="dialog_title_add_applicant_success">The creation was done successfully</string>
    <string name="dialog_title_add_applicant_contact_loading">Retrieving contact</string>
    <string name="dialog_title_add_applicant_contact_no_result">No email associated with contact</string>
    <string name="dialog_title_add_applicant_contact_success">Contact added</string>
    <string name="dialog_title_add_applicant_contact_mail_error">Incorrect mail field</string>

    <!--VideoResponse Activity-->
    <string name="title_activity_response_video">Video response</string>

    <!--About activity-->
    <string name="title_activity_about">About</string>
    <string name="about_application_label">Application</string>
    <string name="about_application">InterviewApp Manager unofficial</string>
    <string name="about_developer_label">Developer</string>
    <string name="about_developer"><a href="www.pierrefourreau.fr">www.pierrefourreau.fr</a></string>
    <string name="about_contact_label">Contact</string>
    <string name="about_contact">fourreau.pierre@gmail.com</string>
    <string name="about_more_label">More</string>
    <string name="about_more1">If you like this app, please rate it.</string>
    <string name="about_more2">If you found errors in the app, please report them to me and the app will be updated as soon as possible. Thanks.</string>
    <string name="about_projects_button">SEE THE LIST OF OPEN SOURCE PROJECTS USED</string>
    <string name="title_activity_open_source_projects_used">OpenSourceProjectsUsed</string>
    <string name="action_settings">Settings</string>

</resources>
