<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fourreau.itwapp.activity.AddApplicantActivity">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--mails-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_applicant_mails"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_applicant_mails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:layout_weight="0.7"
                    android:nextFocusForward="@+id/addApplicantMessage"/>

                <ImageButton
                    android:background="@drawable/ic_action_add_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showContactsDialog"/>
            </LinearLayout>

            <!--message-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_add_applicant_message"/>

            <EditText
                android:id="@+id/add_applicant_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

            <!--language-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_add_applicant_language"/>

            <RadioGroup
                android:id="@+id/add_applicant_radio_group_language"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/add_applicant_radio_en"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/add_applicant_radio_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_add_applicant_language_english"/>

                <RadioButton android:id="@+id/add_applicant_radio_fr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_add_applicant_language_french"/>
            </RadioGroup>

            <!--deadline-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/activity_add_applicant_deadline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/add_applicant_date_choosen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="showDatePickerDialog"
                    android:text="25/09/2016"/>

                <ImageButton
                    android:background="@drawable/ic_action_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"/>

                <TextView
                    android:id="@+id/add_applicant_time_choosen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="showTimePickerDialog"
                    android:text="16:05"/>

                <ImageButton
                    android:background="@drawable/ic_action_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimePickerDialog"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/add_applicant_button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="#1E88E5"
        materialdesign:animate="false"
        materialdesign:iconDrawable="@drawable/ic_action_accept" />

</RelativeLayout>
