<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fourreau.itwapp.activity.InterviewActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:minWidth="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_itw" />

                <!--name-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/activity_interview_name" />

                <TextView
                    android:id="@+id/activity_interview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_interview_name" />

                <!--description-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:text="@string/activity_interview_description" />

                <TextView
                    android:id="@+id/activity_interview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_interview_description" />

                <!--video-->

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/activity_interview_video" />

                    <TextView
                        android:id="@+id/activity_interview_video_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginLeft="3dp"
                        android:text="@string/none" />

                    <ImageButton
                        android:id="@+id/activity_interview_video"
                        android:background="@drawable/youtube"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!--callback-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:text="@string/activity_interview_callback" />

                <TextView
                    android:id="@+id/activity_interview_callback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/activity_interview_callback" />

                <!--questions-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:text="@string/activity_interview_questions" />

                <TextView
                    android:id="@+id/activity_interview_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_interview_questions" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/see_applicants_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="#1E88E5"
        materialdesign:animate="false"
        materialdesign:iconDrawable="@drawable/ic_action_group" />

</RelativeLayout>
