<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_interview"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp">

    <!-- the container view for the title and description -->
    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_centerVertical="true" >

        <!-- the hidden id view -->
        <TextView android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <!-- the title view -->
        <TextView android:id="@+id/itw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

        <!-- sent -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="@string/activity_interviews_interview_sent"
            android:textAppearance="@android:style/TextAppearance.Small" />
        <TextView android:id="@+id/itw_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small" />

            <!-- answers -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:text="@string/activity_interviews_interview_answers"
                android:textAppearance="@android:style/TextAppearance.Small" />
            <TextView android:id="@+id/itw_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <!-- new -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:text="@string/activity_interviews_interview_new"
                android:textAppearance="@android:style/TextAppearance.Small" />
            <TextView android:id="@+id/itw_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>